fix to visibility of paginator

--- a/src/modules/topics/components/topics-view/topics-view.styles.less
+++ b/src/modules/topics/components/topics-view/topics-view.styles.less
@@ -50,3 +50,8 @@
   margin: 0 auto;
   width: 8.5rem;
 }
+
+.Topics__paginator {
+  position: relative;
+  z-index: 10
+}
